--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   },
   "homepage": "https://github.com/tsahil01/sol-vm#readme",
   "dependencies": {
+    "@prisma/client": "^6.7.0",
     "dotenv": "^16.5.0",
     "node-telegram-bot-api": "^0.66.0"
   },
   "devDependencies": {
-    "@types/node-telegram-bot-api": "^0.64.8"
+    "@types/node-telegram-bot-api": "^0.64.8",
+    "prisma": "^6.7.0"
   }
 }
