--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev" : "tsc -b && node dist/index.js"
+    "dev": "tsc -b && node dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -21,8 +21,16 @@
   "homepage": "https://github.com/tsahil01/sol-vm#readme",
   "dependencies": {
     "@prisma/client": "^6.7.0",
+    "@solana/web3.js": "^1.98.2",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.1",
+    "@types/qrcode": "^1.5.5",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "node-telegram-bot-api": "^0.66.0"
+    "express": "^5.1.0",
+    "node-telegram-bot-api": "^0.66.0",
+    "qrcode": "^1.5.4",
+    "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
     "@types/node-telegram-bot-api": "^0.64.8",
