--- a/package.json
+++ b/package.json
@@ -20,16 +20,19 @@
   },
   "homepage": "https://github.com/tsahil01/sol-vm#readme",
   "dependencies": {
+    "@google-cloud/compute": "^5.1.0",
     "@prisma/client": "^6.7.0",
     "@solana/web3.js": "^1.98.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
+    "@types/node": "^22.15.3",
     "@types/qrcode": "^1.5.5",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "node-telegram-bot-api": "^0.66.0",
     "qrcode": "^1.5.4",
+    "ts-node": "^10.9.2",
     "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
