refactors and add sol hd wallets genration

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
-PORT=8000
+PORT=
 TELEGRAM_BOT_TOKEN=
 DATABASE_URL=
 SOLANA_RPC_URL=
+SOLANA_SEED=
 RECEIVER_ADDRESS=
+export GOOGLE_APPLICATION_CREDENTIALS=
+GOOGLE_CLOUD_PROJECT=
