--- a/package.json
+++ b/package.json
@@ -23,12 +23,16 @@
     "@google-cloud/compute": "^5.1.0",
     "@prisma/client": "^6.7.0",
     "@solana/web3.js": "^1.98.2",
+    "@types/bip39": "^2.4.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/node": "^22.15.3",
     "@types/qrcode": "^1.5.5",
+    "bip39": "^3.1.0",
+    "bs58": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
+    "ed25519-hd-key": "^1.3.0",
     "express": "^5.1.0",
     "node-telegram-bot-api": "^0.66.0",
     "qrcode": "^1.5.4",
