--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "express": "^5.1.0",
     "node-telegram-bot-api": "^0.66.0",
     "qrcode": "^1.5.4",
+    "redis": "^5.0.1",
     "ts-node": "^10.9.2",
     "tweetnacl": "^1.0.3"
   },
