--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsc -b && node dist/index.js"
+    "dev": "tsc -b && node dist/index.js",
+    "db:seed": "npx prisma db seed"
   },
   "repository": {
     "type": "git",
@@ -43,5 +44,8 @@
   "devDependencies": {
     "@types/node-telegram-bot-api": "^0.64.8",
     "prisma": "^6.7.0"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   }
 }
