--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "@types/bip39": "^2.4.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
-    "@types/node": "^22.15.3",
     "@types/qrcode": "^1.5.5",
     "bip39": "^3.1.0",
     "bs58": "^6.0.0",
@@ -35,6 +34,7 @@
     "dotenv": "^16.5.0",
     "ed25519-hd-key": "^1.3.0",
     "express": "^5.1.0",
+    "node-cron": "^3.0.3",
     "node-telegram-bot-api": "^0.66.0",
     "qrcode": "^1.5.4",
     "redis": "^5.0.1",
@@ -42,6 +42,8 @@
     "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
+    "@types/node": "^22.15.12",
+    "@types/node-cron": "^3.0.11",
     "@types/node-telegram-bot-api": "^0.64.8",
     "prisma": "^6.7.0"
   },
