--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "node-telegram-bot-api": "^0.66.0",
     "qrcode": "^1.5.4",
     "redis": "^5.0.1",
+    "sshpk": "^1.18.0",
     "ts-node": "^10.9.2",
     "tweetnacl": "^1.0.3"
   },
@@ -45,6 +46,7 @@
     "@types/node": "^22.15.12",
     "@types/node-cron": "^3.0.11",
     "@types/node-telegram-bot-api": "^0.64.8",
+    "@types/sshpk": "^1.17.4",
     "prisma": "^6.7.0"
   },
   "prisma": {
