--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@google-cloud/compute": "^5.1.0",
     "@prisma/client": "^6.7.0",
+    "@prisma/extension-accelerate": "^1.3.0",
     "@solana/web3.js": "^1.98.2",
     "@types/bip39": "^2.4.2",
     "@types/qrcode": "^1.5.5",
