--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsc -b && node dist/index.js",
-    "db:seed": "npx prisma db seed"
+    "db:seed": "npx prisma db seed",
+    "build": "npx tsc -b && npx prisma generate"
   },
   "repository": {
     "type": "git",
